works, is fast, but messy as fuck